Fixed onboarding null pointer exceptions